# Zadanie2

./: Makefile  README  code2.c  kwadrat.c  kwadrat.h  szescian.c  szescian.h
referenced files/: Makefile  Makefile.am  configure.ac
